syntax = "proto3";
option java_multiple_files = true;
package com.epmp.demo;

message PersonCodegen {
  string firstName = 1;
  string lastName = 2;
}

message CollectionCodegen {
  repeated string messages = 1;
}

message OrderCodegen {
  string id = 1;
  PersonCodegen person = 2;
  repeated string positions = 3;
  string comment = 4;
}

message EqualObjectCodegen {
  string id = 1;
  string comment = 2;
  PersonCodegen person = 3;
}

message InheritanceACodegen {
  int32 parent_property = 1;
}

message InheritanceBCodegen {
  string child_property = 1;
  InheritanceACodegen base_ref = 2;
}